improved exception handling and fixed deprecate use of class.getInstance()